# sandsaga

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TRADEMARK.md  bake_assets.sh  make_libs.sh  requirements.txt  setup
cmake/: SDL2.cmake  box2d.cmake  win64-mingw32.toolchain.cmake
cmake/cpack/: cpack_debian.cmake  cpack_linux.cmake  cpack_windows.cmake
cmake/extra/: sandsaga.desktop  windows.rc.in
src/: main.c  util.h
src/assets/: CMakeLists.txt  assets.c  assets.h
src/disk/: CMakeLists.txt  disk.c  disk.h  resources.c  resources.h  worldctrl.c  worldctrl.h
src/engine/: CMakeLists.txt  bonerig.c  bonerig.h  engine.c  engine.h  entities.c  entities.h  gameobjects.c  gameobjects.h  noise.c  noise.h
src/graphics/: CMakeLists.txt  color.h  graphics.c  graphics.h
src/graphics/font/: font.c  font.h
src/log/: CMakeLists.txt  log.c  log.h
src/physics/: CMakeLists.txt  RamerDouglasPeucker.cpp  RamerDouglasPeucker.hpp  box2d_wrapper.cpp  earcut.hpp  meshgen.cpp  physics.h
src/ui/: CMakeLists.txt  ui.c  ui.h
